Finished page 2 of survey

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Survey Title</h1>
     <p>Welcome to our survey! Please take a few minutes to answer the following questions.</p>
-    <button onclick="window.location.href='page1.html'">Start</button>
+    <button onclick="window.location.href='tjlammers_page1.html'">Start</button>
 </body>
 </html>
