--- a/tjlammers_page1.html
+++ b/tjlammers_page1.html
@@ -88,7 +88,7 @@
             <option value="5">5 - Very positive</option>
         </select><br><br>
         
-        <button type="button" onclick="window.location.href='page2.html'">Next</button>
+        <button type="button" onclick="window.location.href='tjlammers_page2.html'">Next</button>
     </form>
 </body>
 </html>
