Fixed the title and added a stylesheet

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Survey Title</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <title>BAIS Survey</title>
 </head>
 <body>
-    <h1>Survey Title</h1>
-    <p>Welcome to our survey! Please take a few minutes to answer the following questions.</p>
+    <h1>Business Analytics Student Survey</h1>
+    <p>Welcome to our survey! Please take a few minutes to answer the following questions. Your results will help gain insights into the BAIS student population.</p>
     <button onclick="window.location.href='tjlammers_page1.html'">Start</button>
 </body>
 </html>
